# yantra-2d

./: .gitignore  CMakeLists.txt  README.md
Editor/include/: Editor.h
Editor/src/: main.cpp
Engine/: CMakeLists.txt
Engine/include/: Engine.h  MathVector.h  Yantra.h
Engine/include/core/: Engine.h
Engine/include/math/: Line.h  Maths.h  Plane.h  Vector.h
Engine/include/utilities/: Logger.h
Engine/src/core/: Engine.cpp
Engine/src/utilities/: Logger.cpp
